recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  if(steps!=0)
  {
    avance(length)
    droite(angle)
    current(step)
    tree(steps-1,length,angle,shrink)
    
    gauche(angle)
    current(step)
    tree(steps-1,length,angle,shrink)
    
  }
}